--- a/css/modal.css
+++ b/css/modal.css
@@ -15,14 +15,15 @@
   display: flex;
 }
 
-
 .modal {
   background: white;
-  min-width: 300px;
+  width: 80vw;
+  max-width: 600px;
   padding: 40px;
-  border: 10px solid #FB5;
+  border: 10px solid #fb5;
   box-shadow: 0 0 0 10px white;
   position: relative;
+  box-sizing: border-box;
 }
 
 @keyframes modal {
@@ -37,7 +38,7 @@
 }
 
 .ativo .modal {
-  animation: modal .3s forwards;
+  animation: modal 0.3s forwards;
 }
 
 .fechar {
@@ -48,37 +49,35 @@
   position: absolute;
   top: -30px;
   right: -30px;
-  background: #E54;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .3);
-  font-size: 1.2rem;
-  font-family: 'IBM Plex Mono', monospace;
-  color: white;
+  background: #e54 url("../img/fechar.svg") no-repeat center center;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
   cursor: pointer;
 }
 
 .modal label {
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   display: block;
   font-weight: bold;
-  margin: 1rem 0 .5rem 0;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .modal input {
   width: 100%;
-  padding: .7rem .5rem;
+  padding: 0.7rem 0.5rem;
   box-sizing: border-box;
+  border: 2px solid #222;
+  border-radius: 0px;
 }
 
-.modal button[type='submit'] {
+.modal button[type="submit"] {
   display: block;
   border: none;
   border-radius: 4px;
-  padding: .7rem 2rem;
+  padding: 0.7rem 2rem;
   margin-top: 1rem;
   font-size: 1rem;
-  font-family: 'IBM Plex Mono', monospace;
+  font-family: "IBM Plex Mono", monospace;
   font-weight: bold;
-  background: #E54;
+  background: #e54;
   color: white;
-
 }
